# RWS-wrapper

./: .gitignore  README.md  setup.cfg
src/rwswrap/: RWS.py
src/rwswrap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
